--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ body {
   font-size: clamp(1.125rem, calc(1vw + 1rem), 1.65rem);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-wrap: balance;
 }
 
 h1,
@@ -40,6 +41,18 @@ button {
 
 button:hover {
   background-color: hsl(220, 65%, 25%);
+}
+
+code {
+  background-color: hsl(220, 13%, 85%);
+  border-radius: 4px;
+  padding: 0.25em;
+  display: inline-block;
+  margin-block: 0.25rem;
+}
+
+pre {
+  padding: 0.5em;
 }
 
 dl dt {
